styles/index.css
/* ... */
.our-services .description {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  text-align: center;
}

.our-services .container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
}

.our-services .container .card {
  position: relative;
  height: 300px;
  -webkit-box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2), inset -5px -5px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
          box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2), inset -5px -5px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
  border-radius: 15px;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  margin: 10px;
}

@media (min-width: 1170px) {
  .our-services .container .card {
    min-width: 320px;
    margin: 30px;
  }
}

.our-services .container .card .box {
  position: absolute;
  top: 20px;
  left: 20px;
  right: 20px;
  bottom: 20px;
  background: #2a2b2f;
  border-radius: 15px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: flex-start;
  overflow: hidden;
  -webkit-transition: 0.5s;
  transition: 0.5s;
}

.our-services .container .card .box:hover {
  -webkit-transform: translateY(-50px);
          transform: translateY(-50px);
}

.our-services .container .card .box:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 50%;
  height: 100%;
  background: rgba(255, 255, 255, 0.03);
}

.our-services .container .card .box .content {
  padding: 20px;
  text-align: center;
}

.our-services .container .card .box .content img {
  -webkit-filter: invert(1);
          filter: invert(1);
}

@media (max-width: 1170px) {
  .our-services .container .card .box .content img {
    width: 60px;
  }
}

.our-services .container .card .box .content h2 {
  position: absolute;
  top: -10px;
  right: 30px;
  color: rgba(255, 255, 255, 0.1);
}

.our-services .container .card .box .content h4 {
  color: #ffffff;
  z-index: 1;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  margin-bottom: 15px;
}

.our-services .container .card .box .content p {
  font-size: 1rem;
  font-weight: 300;
  line-height: 1.5;
  color: rgba(255, 255, 255, 0.9);
  z-index: 1;
  -webkit-transition: 0.5s;
  transition: 0.5s;
}

.booking {
  display: none;
}

.booking.visible {
  display: block;
}

.booking .col {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  position: relative;
}

.booking .col .booking-form {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.booking .col .booking-form.hidden {
  display: none;
}

.booking .col .booking-form input,
.booking .col .booking-form label {
  margin-bottom: 20px;
}

.booking .col .booking-form label {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.booking .col .booking-form label span {
  margin-right: 30px;
}

.booking .col .booking-form label.radio-inline {
  display: block;
}

.booking .col .booking-form .timepicker {
  display: none;
}

.booking .col .booking-form .timepicker.show {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.booking .col .booking-form h3 {
  margin-bottom: 30px;
}

.booking .col .nextVisit {
  display: none;
  text-align: center;
}

.booking .col .nextVisit h3 {
  margin-bottom: 20px;
}

.booking .col .nextVisit.visible {
  display: block;
}

.introduction {
  background-color: #f2f2f2;
}

.introduction .col {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  position: relative;
  text-align: center;
}

.introduction .col h2,
.introduction .col h4 {
  margin-bottom: 20px;
}

.introduction .col video {
  margin: 0 auto;
  width: 800px;
}

@media (max-width: 1170px) {
  .introduction .col video {
    width: 100%;
  }
}

.office {
  background-color: #f2f2f2;
}

.office .slider {
  border-radius: 4px;
  margin: 20px auto 0 auto;
  overflow: hidden;
  position: relative;
}

.office .slider ul {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
}

.office .slider ul li {
  background: #bbb;
  display: block;
  float: left;
  height: 427px;
  line-height: 300px;
  margin: 0;
  padding: 0;
  position: relative;
  text-align: center;
  width: 840px;
}

@media (max-width: 1170px) {
  .office .slider ul li {
    height: calc(427px/1.9);
    width: calc(640px/1.9);
  }
}

.office .slider ul li img {
  width: 100%;
}

.office h3,
.office h4 {
  text-align: center;
}
/* ... */

